stopped the footer from covering the map

--- a/src/CssFiles/BookingPageCSS.css
+++ b/src/CssFiles/BookingPageCSS.css
@@ -12,3 +12,7 @@
   .mapbox-map{
 padding-bottom: 300px;
   }
+
+  .push{
+    height:50px
+  }
